src/Pages/MainField/mainField.scss
.main-field {

  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
  
  &__stars-wrapper {
    display: flex;
    padding-left: 50px;
    height: 50px;
  }

  &__success-star,
  &__error-star {
    padding: 3px;
    width: 40px;
    height: 40px;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }
}

.success-game,
.failure-game {
  display: flex;
  flex-direction: column;
  align-items: center;

  &__heading {
    color: brown;
  }

  &__image {
    width: 45vw;
  }
}

.game__play-button {
  background: rgb(234, 53, 255);
  background: -moz-linear-gradient(30deg, rgb(234, 53, 255) 30%, rgb(90, 140, 250) 70%);
  background: -webkit-linear-gradient(30deg, rgb(234, 53, 255) 30%, rgb(90, 140, 250) 70%);
  background: -o-linear-gradient(30deg, rgb(234, 53, 255) 30%, rgb(90, 140, 250) 70%);
  background: -ms-linear-gradient(30deg, rgb(234, 53, 255) 30%, rgb(90, 140, 250) 70%);
  background: linear-gradient(120deg, rgb(234, 53, 255) 30%, rgb(90, 140, 250) 70%);
  width: 100px;
  height: 40px;
  color: #fff;
  border: none;
  outline-style: none;
  border-radius: 4px;
  font-size: 18px;
  text-transform: uppercase;
  transition: ease-in-out all 0.3s;

  &:hover {
    cursor: pointer;
    box-shadow: 4px 4px 10px rgb(109, 105, 105);
    transform: translateY(-2px);
  }
}

